--- a/OD-Project-Fall_2020.ipynb
+++ b/OD-Project-Fall_2020.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Note: This should be the master notebook from here on (Dec 21, 2020). It is relatively quick to run everything and much cleaner than the notebook \"OD Visualization\". "
+    "### The identification and analysis of employment centers in American metropolitan areas using the US Census' Origin-Destination Employment Statistics (LODES) 2018 dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2113,193 +2113,6 @@
     "\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Next: Perhaps do something about the proportion of total employment represented by the largest cluster?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Ok, we need to map the od_dict keys to the msa_clusters_dict keys\n",
-    "\n",
-    "od_dict_keys = list(od_dict.keys())\n",
-    "od_dict_keys.sort()\n",
-    "\n",
-    "msa_dict_keys = list(msa_clusters_dict.keys())\n",
-    "msa_dict_keys.sort()\n",
-    "\n",
-    "msa_od_map = dict(zip(msa_dict_keys,od_dict_keys))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "top_cluster_portions = []\n",
-    "for msa in msa_dict_keys:\n",
-    "    portion = list(msa_clusters_dict[msa]['Commuters'])[0]/np.sum(od_dict[msa_od_map[msa]]['S000'])\n",
-    "    top_cluster_portions.append(portion)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>MSA</th>\n",
-       "      <th>Top_Cluster_Portion</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>11</td>\n",
-       "      <td>NYC</td>\n",
-       "      <td>0.253059</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>13</td>\n",
-       "      <td>San Fran</td>\n",
-       "      <td>0.232458</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>Boston</td>\n",
-       "      <td>0.220677</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>Chicago</td>\n",
-       "      <td>0.180605</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>DC</td>\n",
-       "      <td>0.139701</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>5</td>\n",
-       "      <td>Denver</td>\n",
-       "      <td>0.126785</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>10</td>\n",
-       "      <td>Minneapolis</td>\n",
-       "      <td>0.098959</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>Atlanta</td>\n",
-       "      <td>0.084668</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>7</td>\n",
-       "      <td>Houston</td>\n",
-       "      <td>0.059502</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>Dallas</td>\n",
-       "      <td>0.054818</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>8</td>\n",
-       "      <td>Los Angeles</td>\n",
-       "      <td>0.053635</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>9</td>\n",
-       "      <td>Miami</td>\n",
-       "      <td>0.043593</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>12</td>\n",
-       "      <td>Phoenix</td>\n",
-       "      <td>0.038643</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>6</td>\n",
-       "      <td>Detroit</td>\n",
-       "      <td>0.036582</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>14</td>\n",
-       "      <td>Seattle</td>\n",
-       "      <td>0.025590</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            MSA  Top_Cluster_Portion\n",
-       "11          NYC             0.253059\n",
-       "13     San Fran             0.232458\n",
-       "1        Boston             0.220677\n",
-       "2       Chicago             0.180605\n",
-       "3            DC             0.139701\n",
-       "5        Denver             0.126785\n",
-       "10  Minneapolis             0.098959\n",
-       "0       Atlanta             0.084668\n",
-       "7       Houston             0.059502\n",
-       "4        Dallas             0.054818\n",
-       "8   Los Angeles             0.053635\n",
-       "9         Miami             0.043593\n",
-       "12      Phoenix             0.038643\n",
-       "6       Detroit             0.036582\n",
-       "14      Seattle             0.025590"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "top_cluster_df = pd.DataFrame({\n",
-    "    'MSA': msa_dict_keys,\n",
-    "    'Top_Cluster_Portion': top_cluster_portions})\n",
-    "\n",
-    "top_cluster_df = top_cluster_df.sort_values(by=\"Top_Cluster_Portion\",ascending=False)\n",
-    "\n",
-    "top_cluster_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
